<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_page_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="6dp"
    android:background="#CCA3B1"

    android:orientation="vertical">

    <TextView
        android:id="@+id/home_top2_spend_cash"
        android:layout_width="48dp"
        android:layout_height="35dp"
        android:layout_margin="@dimen/text_padding"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="4dp"
        android:gravity="center|left"
        android:hint="@string/value_spending_one_hint"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/home_chip_addSpending"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/home_top2_spend_name"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/home_top2_spend_name"
        android:layout_width="115dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="2dp"
        android:hint="@string/top_spending_two_hint"
        android:paddingHorizontal="@dimen/text_padding"
        android:text="@string/min_text"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/home_chip_addSpending"
        app:layout_constraintEnd_toStartOf="@+id/home_top2_spend_cash"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/home_save_cash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="87dp"
        android:layout_marginBottom="9dp"
        android:hint="@string/save_hint"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/home_usage_cash"
        android:layout_width="73dp"
        android:layout_height="34dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="9dp"
        android:hint="@string/usage_hint"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="76dp"
        android:layout_height="32dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="9dp"
        android:fontFamily="@font/almendra_sc"
        android:text="@string/save_text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toStartOf="@+id/home_save_cash"
        app:layout_constraintStart_toEndOf="@+id/home_usage_cash"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="83dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/almendra_sc"
        android:padding="@dimen/text_padding"
        android:text="@string/date_text"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/almendra_sc"
        android:padding="@dimen/text_padding"
        android:text="@string/day_target_text"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="81dp"
        android:layout_height="34dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="7dp"
        android:fontFamily="@font/almendra_sc"
        android:text="@string/usage_text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="270dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/almendra_sc"
        android:gravity="center"
        android:text="@string/usage_list_text"
        android:textColor="#E91E63"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_usage_cash" />

    <TextView
        android:id="@+id/home_top1_spend_name"
        android:layout_width="115dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="2dp"
        android:hint="@string/top_spending_one_hint"
        android:padding="@dimen/text_padding"
        android:text="@string/max_text"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/chip5"
        app:layout_constraintEnd_toStartOf="@+id/home_top1_spend_cash"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_marginBaseline="@dimen/text_padding" />

    <TextView
        android:id="@+id/home_top1_spend_cash"
        android:layout_width="38dp"
        android:layout_height="35dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:gravity="center|left"
        android:hint="@string/value_spending_two_hint"
        android:padding="@dimen/text_padding"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/home_top2_spend_name"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/home_top1_spend_name"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip5"
        style="@style/chip_style"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="4dp"
        android:text="@string/chip_viewspending"
        android:textColor="#DD1257"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/home_chip_addSpending"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_top1_spend_name" />

    <com.google.android.material.chip.Chip
        android:id="@+id/home_chip_addSpending"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="32dp"
        android:padding="@dimen/text_padding"
        android:text="@string/chip_text_add"
        android:textColor="#E4155C"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/chip5"
        app:layout_constraintTop_toBottomOf="@+id/home_top2_spend_name"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip5"></LinearLayout>

    <TextView
        android:id="@+id/home_days_target"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="7dp"
        android:gravity="center|left"
        android:hint="300 ksh"
        android:text="TextView"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView2" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="66dp"
        android:layout_height="45dp"
        android:layout_marginTop="19dp"
        android:backgroundTint="#A13D3D"
        android:shadowColor="#9E5555"
        app:layout_constraintBottom_toTopOf="@+id/home_days_target"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/home_date_textView"
        android:layout_width="198dp"
        android:layout_height="48dp"
        android:layout_marginEnd="5dp"
        android:gravity="center|left"
        android:text="TextView"
        android:textSize="23sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/radioButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.571" />

</androidx.constraintlayout.widget.ConstraintLayout>